Fix bug dicom search + starting transfer